kubernetes-setup/api-photo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-photo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      podLabel: api-photo-pod-label
  template:
    metadata:
      labels:
        podLabel: api-photo-pod-label
    spec:
      containers:
        - name: api-photo-pod-cont
          image: api-photo-img:v1.0.0
          imagePullPolicy: Never
