kubernetes-setup/api-auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-auth-svc
spec:
  type: ClusterIP
  selector:
    podLabel: api-auth-pod-label
  ports:
    - protocol: TCP
      port: 80
