kubernetes-setup/api-photo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-photo-svc
spec:
  type: ClusterIP
  selector:
    podLabel: api-photo-pod-label
  ports:
    - protocol: TCP
      port: 80
