kubernetes-setup/api-post-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-post-svc
spec:
  type: ClusterIP
  selector:
    podLabel: api-post-pod-label
  ports:
    - protocol: TCP
      port: 80
