kubernetes-setup/api-user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-user-svc
spec:
  type: NodePort
  selector:
    podLabel: api-user-pod-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
