kubernetes-setup/db-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mongo-svc
spec:
  type: ClusterIP
  selector:
    podLabel: db-mongo-pod-label
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
