kubernetes-setup/ui-blogs-app1-com-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-blogs-app1-com-svc
spec:
  type: ClusterIP
  selector:
    podLabel: ui-blogs-app1-com-pod-label
  ports:
    - protocol: TCP
      port: 8080
